# prompt-engineering-project

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
azure_openai_helper/: PROMPT_LOG.md  __init__.py
config/: default.yaml
data/: tasks_v1.json  tasks_v2.json
docs/: ARCHITECTURE.md  PRD.md  PROMPT_ENGINEERING_LOG.md
src/: compare_baseline_cot.py  run_all_experiments.py  run_baseline_experiment.py  run_cot_experiment.py  run_fewshot_experiment.py  run_full_pipeline.py  summarize_results.py  try_azure_import.py  try_baseline.py  try_config.py  try_evaluator.py  try_llm_client.py  try_load_tasks.py
src/analysis/: analyze_cot_overthinking.py  analyze_fewshot_effect.py  analyze_length_correlation.py  analyze_prompt_variation.py  compare_methods_per_task.py  generate_html_report.py  load_results.py  plot_overall_accuracy.py  summarize_methods.py
src/azure_openai_helper/: README.md  llm_client.py  test_multi_model.py  test_validation.py
src/prompt_lab/: cli.py
src/prompt_lab/config/: loader.py
src/prompt_lab/dataset/: generator.py
src/prompt_lab/evaluator/: metrics.py
src/prompt_lab/methods/: baseline.py  cot.py  fewshot.py
src/prompt_lab/utils/: llm_client.py
tests/: conftest.py  test_dataset.py  test_metrics.py
